--- a/style/online.css
+++ b/style/online.css
@@ -720,7 +720,7 @@ body {
   .rooms_calendar {
     width: auto;
     max-width: 100%;
-    margin: 0 auto;
+    margin: 0 10px;
   }
 }
 .rooms_calendar :root {
