--- a/style/main.css
+++ b/style/main.css
@@ -892,9 +892,7 @@ img {
 .footer .footer_box {
   width: 100%;
   width: 100%;
-  padding: 103px 0 90px;
-  padding-left: calc(20px + 5.7%);
-  padding-right: 12%;
+  padding: 103px 12% 90px calc(20px + 5.7%);
   position: relative;
   background: #bae1d0;
   border-bottom-right-radius: 15px;
@@ -1461,17 +1459,17 @@ img {
   writing-mode: vertical-lr;
 }
 .introduction_bg .txt span {
+  margin-top: 30px;
   writing-mode: vertical-lr;
   position: relative;
-  margin-top: 30px;
 }
 .introduction_bg .txt span::before {
   content: "";
+  width: 4px;
+  height: 4px;
   position: absolute;
   top: -17px;
   left: 10px;
-  width: 4px;
-  height: 4px;
   border-radius: 100%;
   background: #fff;
   z-index: 1;
@@ -1517,9 +1515,9 @@ img {
 @media screen and (max-width: 1024px) {
   .introduction_main .title {
     width: 100%;
+    padding: 10px;
     background-color: #63bedf;
     color: #fff;
-    padding: 10px;
     border-radius: 10px;
     cursor: pointer;
     display: flex;
@@ -1535,8 +1533,8 @@ img {
 }
 .introduction_main .title .title_m {
   width: 87%;
-  position: absolute;
   padding: 10px;
+  position: absolute;
   left: 0;
   bottom: -43px;
   color: #63bedf;
@@ -1549,10 +1547,10 @@ img {
   }
 }
 .introduction_main h2 {
+  margin: initial;
   padding-bottom: 20px;
   font-size: 36px;
   line-height: 1.5;
-  margin: initial;
   font-weight: bold;
   position: relative;
   text-align: center;
