--- a/style/contact.scss
+++ b/style/contact.scss
@@ -107,6 +107,9 @@
       border-radius: 10px;
       color: #737373;
       font-size: 16px;
+      option{
+        margin: 0 10px;
+      }
     }
     .qustion_list {
       display: flex;
