--- a/style/main.scss
+++ b/style/main.scss
@@ -322,6 +322,7 @@ body {
       padding: 20px 80px 0 0;
       display: flex;
       align-items: center;
+      white-space: nowrap;
       @include rwd(840) {
         flex-direction: column;
       }
