--- a/style/stay.scss
+++ b/style/stay.scss
@@ -130,8 +130,8 @@
             img {
               width: 100%;
               height: 500px;
-              @include rwd(499){
-                height: 100%;
+              @include rwd(600){
+                height:300px;
               }
             }
           }
