--- a/style/header.css
+++ b/style/header.css
@@ -261,11 +261,11 @@ img {
 .header .header_box .language_box .language_txt {
   padding: 25px 10px;
   display: flex;
+  justify-content: center;
+  align-items: flex-end;
   border: 1px solid #fff;
   color: #fff;
   border-radius: 50px;
-  justify-content: center;
-  align-items: flex-end;
   writing-mode: vertical-lr;
   position: relative;
   cursor: pointer;
@@ -409,8 +409,8 @@ img {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .header_m.on {
-  background-color: transparent;
-  filter: contrast(0) brightness(10);
+  background-color: #fff;
+  filter: contrast(100%) brightness(1);
 }
 @media screen and (max-width: 1180px) {
   .header_m {
