--- a/style/header.scss
+++ b/style/header.scss
@@ -99,11 +99,11 @@
       .language_txt {
         padding: 25px 10px;
         display: flex;
+        justify-content: center;
+        align-items: flex-end;
         border: 1px solid #fff;
         color: #fff;
         border-radius: 50px;
-        justify-content: center;
-        align-items: flex-end;
         writing-mode: vertical-lr;
         position: relative;
         cursor: pointer;
@@ -254,8 +254,8 @@
   background-color: #fff;
   box-shadow: 0 0 15px rgba($color: #000000, $alpha: 0.1);
   &.on{
-    background-color: transparent;
-    filter: contrast(0) brightness(10);
+    background-color: #fff;
+    filter: contrast(100%) brightness(1);
   }
   @include rwd(1180) {
     display: flex;
