--- a/style/stay.css
+++ b/style/stay.css
@@ -250,11 +250,11 @@ img {
 }
 .clous_content_bg .txt span::before {
   content: "";
+  width: 4px;
+  height: 4px;
   position: absolute;
   top: -17px;
   left: 10px;
-  width: 4px;
-  height: 4px;
   border-radius: 100%;
   background: #fff;
   z-index: 1;
@@ -310,7 +310,7 @@ img {
   width: 100%;
   height: 500px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
   .clous_content .clous_carousel .clous_carousel_b .slick-track .slick-slide .clous_carousel_b_img img {
     height: 300px;
   }
@@ -341,8 +341,7 @@ img {
 }
 @media screen and (max-width: 768px) {
   .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide .clous_carousel_m_img img {
-    width: 100%;
-    height: 209px;
+    height: 150px;
   }
 }
 .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide.slick-current .clous_carousel_m_img {
@@ -364,8 +363,7 @@ img {
   }
 }
 .clous_content .clous_item h2 {
-  padding: 12px 0;
-  padding-top: 60px;
+  padding: 60px 0 12px 0;
   border-bottom: 1px solid #d6d6d6;
   color: #191919;
   font-size: 24px;
