--- a/style/stay.scss
+++ b/style/stay.scss
@@ -77,11 +77,11 @@
       margin-top: 30px;
       &::before {
         content: "";
-        position: absolute;
-        top: -17px;
-        left: 10px;
         width: 4px;
         height: 4px;
+        position: absolute;
+        top: -17px;
+        left: 10px; 
         border-radius: 100%;
         background: #fff;
         z-index: 1;
@@ -130,7 +130,7 @@
             img {
               width: 100%;
               height: 500px;
-              @include rwd(600){
+              @include rwd(1200){
                 height:300px;
               }
             }
@@ -156,8 +156,7 @@
               width: 100%;
               height: 137px;
               @include rwd(768) {
-                width: 100%;
-                height: 209px;
+                height: 150px;
               }
             }
           }
@@ -181,8 +180,7 @@
       padding-left: 0;
     }
     h2 {
-      padding: 12px 0;
-      padding-top: 60px;
+      padding:60px 0 12px 0;
       border-bottom: 1px solid #d6d6d6;
       color: #191919;
       font-size: 24px;
