--- a/style/notice.scss
+++ b/style/notice.scss
@@ -542,7 +542,7 @@ body {
         font-size: 12px;
       }
     }
-    .img {
+    .foot {
       display: flex;
       align-items: center;
     }
