--- a/style/offer.scss
+++ b/style/offer.scss
@@ -409,7 +409,6 @@ body {
 
 // collection_list
 .collection_list {
-  // width: 1200px;
   margin: 0 auto;
   display: flex;
   .collection_item {
@@ -779,7 +778,7 @@ body {
         font-size: 12px;
       }
     }
-    .img {
+    .foot {
       display: flex;
       align-items: center;
     }
