--- a/style/rooms_item.scss
+++ b/style/rooms_item.scss
@@ -1091,7 +1091,7 @@ body {
         font-size: 12px;
       }
     }
-    .img {
+    .foot {
       display: flex;
       align-items: center;
     }
