--- a/style/stay.scss
+++ b/style/stay.scss
@@ -16,7 +16,7 @@
     background-color: black;
     opacity: 0.2;
   }
-  .img {
+  .content_bg {
     height: 640px;
     img {
       width: 100%;
