--- a/style/generally.scss
+++ b/style/generally.scss
@@ -555,7 +555,7 @@ body {
         font-size: 12px;
       }
     }
-    .img {
+    .foot {
       display: flex;
       align-items: center;
     }
