--- a/style/reservation.css
+++ b/style/reservation.css
@@ -1521,7 +1521,7 @@ body {
 .footer .title .txt p {
   font-size: 12px;
 }
-.footer .title .img {
+.footer .title .foot {
   display: flex;
   align-items: center;
 }
