--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -1083,7 +1083,7 @@ body {
         font-size: 12px;
       }
     }
-    .img {
+    .foot {
       display: flex;
       align-items: center;
     }
