--- a/style/rooms.css
+++ b/style/rooms.css
@@ -184,10 +184,10 @@ img {
   background-color: black;
   opacity: 0.2;
 }
-.rooms_bg .img {
+.rooms_bg .rooms_bg_img {
   height: 640px;
 }
-.rooms_bg .img img {
+.rooms_bg .rooms_bg_img img {
   width: 100%;
   height: 100%;
   vertical-align: middle;
