--- a/style/rooms.scss
+++ b/style/rooms.scss
@@ -17,7 +17,7 @@
     background-color: black;
     opacity: 0.2;
   }
-  .img{
+  .rooms_bg_img{
     height: 640px;
     img {
       width: 100%;
