--- a/style/latest.css
+++ b/style/latest.css
@@ -184,7 +184,7 @@ img {
   background-color: black;
   opacity: 0.2;
 }
-.latest_bg img {
+.latest_bg .latest_bg_img {
   height: 640px;
 }
 .latest_bg .title {
