--- a/style/location.css
+++ b/style/location.css
@@ -184,7 +184,7 @@ img {
   background-color: black;
   opacity: 0.2;
 }
-.location_bg img {
+.location_bg .location_bg_img {
   height: 640px;
 }
 .location_bg .title {
