--- a/style/main.css
+++ b/style/main.css
@@ -1410,7 +1410,7 @@ img {
   background-color: black;
   opacity: 0.2;
 }
-.introduction_bg img {
+.introduction_bg .introduction_bg_img {
   height: 640px;
 }
 .introduction_bg .title {
