--- a/style/notice.css
+++ b/style/notice.css
@@ -607,24 +607,17 @@ body {
 }
 
 .notice {
-  width: 800px;
-  padding-top: 50px;
-  margin: 0 auto;
-}
-@media screen and (max-width: 968px) {
-  .notice {
-    width: auto;
-    margin: 0 15px;
-  }
+  padding: 50px 0 0 20px;
 }
 .notice .title {
   font-weight: bolder;
+  padding-left: 50px;
 }
 .notice .illustrate {
-  padding: 20px 0 20px 20px;
+  padding: 20px 0 20px 0;
 }
 .notice .definition {
-  padding: 0 0 20px 20px;
+  padding-bottom: 20px;
 }
 .notice .online_rooms p {
   padding: 20px 0;
@@ -633,6 +626,11 @@ body {
 .notice .reserve,
 .notice .travelers_notice {
   padding: 10px 0;
+}
+.notice .retreat .title,
+.notice .reserve .title,
+.notice .travelers_notice .title {
+  padding: 0;
 }
 .notice .agree {
   padding: 20px 0;
@@ -711,7 +709,7 @@ body {
   justify-content: center;
 }
 .notice .coin h2 + h2 {
-  margin: 0 0 100px 20px;
+  margin: 0 0 100px 30px;
 }
 
 .footer {
