--- a/style/notice.scss
+++ b/style/notice.scss
@@ -5,9 +5,11 @@ body {
   position: relative;
   scroll-behavior: smooth;
 }
+
 .all_body {
   overflow: hidden;
 }
+
 // logo
 .logo {
   width: 1200px;
@@ -21,7 +23,7 @@ body {
     width: 100%;
     padding-top: 10px;
   }
-  @include rwd(768){
+  @include rwd(768) {
     height: auto;
     margin: 0;
     padding: 0 0 10px 10px;
@@ -32,7 +34,7 @@ body {
       width: 130px;
       height: 160px;
       margin-top: 10px;
-      @include rwd(768){
+      @include rwd(768) {
         width: 30px;
         height: 40px;
       }
@@ -78,7 +80,7 @@ body {
       img {
         width: 18px;
         height: 20px;
-        margin:0 10px 0 0;
+        margin: 0 10px 0 0;
       }
     }
     .checkout {
@@ -156,7 +158,7 @@ body {
             animation: aa 0.5s forwards;
             font-weight: bolder;
             background-color: #97999b;
-            @include rwd(768){
+            @include rwd(768) {
               animation: aaaa 0.5s forwards;
             }
             &:hover {
@@ -282,7 +284,7 @@ body {
         }
       }
       animation: aa 0.5s;
-      @include rwd(768){
+      @include rwd(768) {
         animation: aaaa 0.5s;
       }
       p {
@@ -410,21 +412,16 @@ body {
 
 // notice
 .notice {
-  width: 800px;
-  padding-top: 50px;
-  margin: 0 auto;
-  @include rwd(968) {
-    width: auto;
-    margin: 0 15px;
-  }
+  padding: 50px 0 0 20px;
   .title {
     font-weight: bolder;
+    padding-left: 50px;
   }
   .illustrate {
-    padding: 20px 0 20px 20px;
+    padding: 20px 0 20px 0;
   }
   .definition {
-    padding: 0 0 20px 20px;
+    padding-bottom: 20px;
   }
   .online_rooms {
     p {
@@ -435,6 +432,9 @@ body {
   .reserve,
   .travelers_notice {
     padding: 10px 0;
+    .title {
+      padding: 0;
+    }
   }
   .agree {
     padding: 20px 0;
@@ -511,7 +511,7 @@ body {
       align-items: center;
       justify-content: center;
       & + h2 {
-        margin: 0 0 100px 20px;
+        margin: 0 0 100px 30px;
       }
     }
   }
