--- a/style/notice.scss
+++ b/style/notice.scss
@@ -326,15 +326,24 @@ body {
 }
 
 // process
+.process_title{
+  width: 1200px;
+  margin: 70px auto 0;
+  font-size: 14px;
+  @include rwd(968){
+    width: auto;
+    margin:70px 0 0;
+  }
+}
 .process {
   width: 1000px;
   height: 1px;
-  margin: 150px auto 0;
+  margin: 70px auto 0;
   background-color: #97999b;
   position: relative;
   @include rwd(1100) {
     width: auto;
-    margin: 130px 50px 0 20px;
+    margin: 70px 50px 0 20px;
   }
   .process_item {
     display: flex;
@@ -412,7 +421,13 @@ body {
 
 // notice
 .notice {
+  width: 1200px;
+  margin: 0 auto;
   padding: 50px 0 0 20px;
+  @include rwd(968){
+    width: auto;
+    margin: 0;
+  }
   .title {
     font-weight: bolder;
     padding-left: 50px;
