--- a/style/latest.scss
+++ b/style/latest.scss
@@ -18,6 +18,11 @@
   }
   .latest_bg_img{
     height: 640px;
+    img {
+      object-fit: cover;
+      height: 100%;
+      vertical-align: middle;
+    }
   }
   .title {
     position: absolute;
