--- a/style/main.scss
+++ b/style/main.scss
@@ -24,6 +24,80 @@ body {
   }
 }
 
+// header
+.header {
+  &.on {
+    .burger {
+      .menu {
+        &.on {
+          background-color: #000;
+          &::before,
+          &::after {
+            background-color: #000;
+          }
+        }
+      }
+    }
+    .header_box {
+      .language_txt {
+        &.on {
+          border: 1px solid #000;
+          h2 {
+            color: #000;
+          }
+          p {
+            color: #000;
+          }
+        }
+      }
+      .message_box {
+        &.on {
+          border: 1px solid #000;
+          img {
+            filter: contrast(100%) brightness(1);
+          }
+          h2 {
+            color: #000;
+          }
+        }
+      }
+    }
+  }
+}
+.header_m_bg{
+  @keyframes nnnn {
+    from{
+      transform: translateY(-100%);
+    }
+    to{
+      transform: translateY(0%);
+    }
+  }
+  animation: nnnn 0.5s;
+ 
+}
+.header_m{
+  background-color: transparent;
+  transition: all 0.5s;
+  &.on{
+    filter: contrast(100%) brightness(1);
+  }
+  .hd_m_img{
+    filter: contrast(0) brightness(10);
+  }
+  .burger{
+    .menu{
+      background-color: #fff;
+      &::before,
+      &::after{
+        background-color: #fff;
+      }
+      p{
+        color: #fff;
+      }
+    }
+  }
+}
 // start_bg
 .start_bg {
   width: 100%;
@@ -111,6 +185,9 @@ body {
     transform: translate(-50%, -50%);
     font-size: 36px;
     color: #63bedf;
+    @include rwd(768) {
+      width: 500px;
+    }
     .txt {
       h2 {
         font-weight: bolder;
@@ -979,6 +1056,9 @@ body {
           }
         }
         animation: hh 0.5s 1s forwards;
+        span{
+          padding-left: 50px;
+        }
       }
       .txt {
         width: 100%;
@@ -1315,7 +1395,7 @@ body {
       font-weight: bolder;
       @include rwd(1180) {
         margin-right: 0;
-        transform: translateY(300%);
+        transform: translateY(800%);
       }
       &::before {
         content: "";
@@ -1594,7 +1674,7 @@ body {
     }
   }
   h3 {
-    padding-top: 20px;
+    padding: 20px;
     letter-spacing: 2.5px;
   }
   .field_bg {
@@ -1716,7 +1796,7 @@ body {
         padding-top: 20px;
       }
       p {
-        padding-top: 10px;
+        padding: 20px;
       }
       @include rwd(1600) {
         margin: 0 auto;
@@ -1863,6 +1943,7 @@ body {
     }
   }
   .field_about {
+    margin-top: 50px;
     position: relative;
     bottom: 15%;
     &:hover {
