--- a/style/notice.css
+++ b/style/notice.css
@@ -634,7 +634,7 @@ body {
   padding-left: 50px;
 }
 .notice .illustrate {
-  padding: 20px 0 20px 0;
+  padding: 20px 0;
 }
 .notice .definition {
   padding-bottom: 20px;
