--- a/style/notice.scss
+++ b/style/notice.scss
@@ -433,7 +433,7 @@ body {
     padding-left: 50px;
   }
   .illustrate {
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
   }
   .definition {
     padding-bottom: 20px;
@@ -459,7 +459,7 @@ body {
     font-size: 15px;
     font-weight: bold;
   }
-  .rooms_content {
+  .rooms_content { 
     padding: 10px 0 10px 10px;
     margin-bottom: 2px;
     border-top: 5px solid #000;
