--- a/style/contact.scss
+++ b/style/contact.scss
@@ -18,6 +18,11 @@
   }
   .contact_bg_img {
     height: 640px;
+    img {
+      object-fit: cover;
+      height: 100%;
+      vertical-align: middle;
+    }
   }
   .title {
     position: absolute;
