--- a/style/location.css
+++ b/style/location.css
@@ -187,6 +187,12 @@ img {
 .location_bg .location_bg_img {
   height: 640px;
 }
+.location_bg .location_bg_img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  vertical-align: middle;
+}
 .location_bg .title {
   position: absolute;
   top: 15%;
