--- a/style/header.css
+++ b/style/header.css
@@ -409,8 +409,11 @@ img {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .header_m.on {
-  background-color: #fff;
+  background-color: transparent;
   filter: contrast(100%) brightness(1);
+}
+.header_m.on .hd_m_img {
+  filter: contrast(0) brightness(10);
 }
 @media screen and (max-width: 1180px) {
   .header_m {
@@ -523,15 +526,20 @@ img {
 .header_m.on {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
+@media screen and (max-width: 1180px) {
+  .header_m.on {
+    box-shadow: none;
+  }
+}
 .header_m.on .hd_m_img {
-  filter: contrast(100%) brightness(1);
+  filter: contrast(0) brightness(10);
 }
 .header_m.on .burger .menu {
-  background-color: #000;
+  background-color: #fff;
 }
 .header_m.on .burger .menu p {
-  color: #000;
+  color: #fff;
 }
 .header_m.on .burger .menu::before, .header_m.on .burger .menu::after {
-  background-color: #000;
+  background-color: #fff;
 }/*# sourceMappingURL=header.css.map */
