--- a/style/main.scss
+++ b/style/main.scss
@@ -279,6 +279,7 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
+  background-size: cover;
   z-index: 4;
   @include rwd(1180) {
     top: auto;
@@ -286,7 +287,7 @@ body {
   &::-webkit-scrollbar {
     display: none;
   }
-  background-size: cover;
+ 
   @include rwd(840) {
     overflow-y: auto;
   }
@@ -777,8 +778,8 @@ body {
         }
         button {
           width: 80%;
-          min-width: 165px;
           height: 40px;
+          min-width: 165px;    
           padding: 10px;
           position: absolute;
           background-color: transparent;
@@ -1377,8 +1378,9 @@ body {
   .brand_txt {
     padding-right: 60px;
     display: flex;
+    flex-direction: row-reverse;
     @include rwd(1180) {
-      margin-bottom: 150px;
+      margin-bottom: 80px;
       padding-right: 0;
       flex-direction: column;
     }
@@ -1396,24 +1398,22 @@ body {
       position: relative;
       display: inline-block;
       font-size: 20px;
-      font-weight: 300;
       letter-spacing: 2px;
       color: #63bedf;
-      font-size: 20px;
       font-weight: bolder;
       @include rwd(1180) {
         margin-right: 0;
-        transform: translateY(800%);
+        transform: translateY(200%);
       }
       &::before {
         content: "";
         height: 90px;
         width: 1px;
+        background-color: #63bedf;
         display: flex;
         position: absolute;
         top: 22%;
         left: 50%;
-        background-color: #63bedf;
         @include rwd(1180) {
           width: 100px;
           height: 1px;
