--- a/layout/header.html
+++ b/layout/header.html
@@ -165,12 +165,12 @@
 
     $(window).scroll(showMenu);
 
-    function showMenu() {
-      if ($(window).scrollTop() > 200) {
-        $(".header_m").addClass("on");
-      } else {
-        $(".header_m").removeClass("on");
-      }
-    }
+    // function showMenu() {
+    //   if ($(window).scrollTop() > 200) {
+    //     $(".header_m").addClass("on");
+    //   } else {
+    //     $(".header_m").removeClass("on");
+    //   }
+    // }
   });
 </script>
